tests/Compilation/negative/test001.juvix
-- pattern matching coverage
module test001;

import Stdlib.Prelude open;

f : List Nat -> List Nat -> Nat
  | (x :: xs) (y :: ys) := x + y
  | _ (_ :: z :: zs) := z
  | _ nil := 0;

main : Nat := f (1 :: nil) (2 :: nil);

